<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:text="@string/filter_by_population"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/clearAllFilter"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:text="@string/clear_all"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/divider"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <TextView
            android:id="@+id/lessThanMillion"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/less_than_1_million"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/lessThanFiveMillion"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/less_than_5_million"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/lessThanTenMillion"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/less_than_10_million"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>