<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4sdp"
    android:background="@color/colorSecondaryBackground"
    android:padding="@dimen/_4sdp">

    <ImageView
        android:id="@+id/countryLogo"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="@id/detailsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="@id/detailsLayout"
        app:layout_constraintEnd_toStartOf="@id/detailsLayout"
        app:layout_constraintStart_toEndOf="@id/countryLogo"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="India" />

    <LinearLayout
        android:id="@+id/detailsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/countryLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCapital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capital"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/countryCapital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_12ssp"
                tools:text="Delhi" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/countryCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_12ssp"
                tools:text=" INR" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPopulation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/population"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/countryPopulation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_12ssp"
                tools:text="1000000" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>